--- a/products/tea.html
+++ b/products/tea.html
@@ -179,7 +179,7 @@
 </head>
 <body class="bg-white">
     <!-- Navigation -->
-    <nav class="w-full bg-white border-b border-gray-200 sticky top-0 z-50">
+    <nav class="w-full bg-white border-b border-gray-200">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-20">
                 <!-- Logo -->
@@ -230,11 +230,11 @@
                         <div class="container mx-auto px-6">
                             <div class="">
                                 <h1 class="text-2xl md:text-5xl font-bold text-white mb-2 md:mb-4">Our Recommended Tea</h1>
-                                <p class="text-white/90 text-lg md:text-xl mb-4 md:mb-6">Perfect for your business needs, offering an affordable supply</p>
+                                <p class="text-white text-lg md:text-xl mb-4 md:mb-6">Perfect for your business needs, offering an affordable supply</p>
 
                                 <!-- Free Samples CTA -->
                                 <div class="flex flex-col sm:flex-row justify-between sm:items-center gap-4">
-                                  <p class="hidden sm:block text-white/80 w-full sm:w-1/2">
+                                  <p class="hidden sm:block text-white w-full sm:w-1/2">
                                     Discover our hand-picked selection. It has passed our stringent quality qualifications, earning our personal recommendation and is designed for global market demands
                                   </p>
                                   <div class="w-full sm:w-1/2 flex sm:justify-end">
@@ -365,7 +365,7 @@
                 </div>
 
                 <!-- Green Tea Category -->
-                <div class="border-l-4 border-emerald-500 pl-8">
+                <div id="green-tea" class="border-l-4 border-emerald-500 pl-8">
                     <div class="mb-8">
                         <div class="flex flex-col sm:flex-row sm:items-center gap-2 sm:gap-3 mb-4">
                             <h2 class="text-3xl font-bold text-gray-800">Green Tea</h2>
@@ -464,7 +464,7 @@
                 </div>
 
                 <!-- Loose Leaf Tea Category -->
-                <div class="border-l-4 border-amber-400 pl-8">
+                <div id="loose-leaf-tea" class="border-l-4 border-amber-400 pl-8">
                     <div class="mb-8">
                         <div class="flex flex-col sm:flex-row sm:items-center gap-2 sm:gap-3 mb-4">
                             <h2 class="text-3xl font-bold text-gray-800">Loose Leaf Tea</h2>
@@ -690,6 +690,47 @@
     </div>
 
     <script>
+        // Prevent immediate scroll to hash on page load
+        if (window.location.hash) {
+            // Store the hash
+            const hash = window.location.hash;
+            // Clear it immediately to prevent browser jump
+            history.replaceState(null, null, window.location.pathname);
+            
+            // Scroll to section after page loads
+            window.addEventListener('load', function() {
+                const sectionId = hash.substring(1);
+                setTimeout(() => {
+                    scrollToSection(sectionId);
+                }, 300);
+            });
+        }
+
+        // Smooth scroll function for anchor links
+        function scrollToSection(sectionId) {
+            const element = document.getElementById(sectionId);
+            if (element) {
+                element.scrollIntoView({
+                    behavior: 'smooth',
+                    block: 'start'
+                });
+            }
+        }
+
+        // Check for hash in URL and scroll to section on page load
+        document.addEventListener('DOMContentLoaded', function() {
+            const hash = window.location.hash;
+            if (hash) {
+                const sectionId = hash.substring(1); // Remove the # symbol
+                // Clear the hash to prevent browser jump
+                history.replaceState(null, null, window.location.pathname);
+                // Scroll to section after a short delay
+                setTimeout(() => {
+                    scrollToSection(sectionId);
+                }, 200); // Slightly longer delay to ensure page is fully loaded
+            }
+        });
+
         // Variant Popup Functions
         function openVariantPopup(title, description, imageSrc) {
             const popup = document.getElementById('variantPopup');
