--- a/products/tea.html
+++ b/products/tea.html
@@ -539,26 +539,28 @@
                         </div>
 
                         <!-- White Tea - PREMIUM CHOICE -->
-                        <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card relative border-2 border-amber-300 hover:shadow-2xl transition-all duration-300" onclick="openVariantPopup('White Tea', 'White tea is the least processed tea, harvested before the leaves fully open, resulting in a delicate flavor and high antioxidant content. Premium choice for health-conscious buyers.', '/assets/images/specialty-tea-white-tea.jpg')">
-                            <div class="absolute -top-0 -right-0 z-20">
-                                <div class="bg-amber-400 text-white px-3 py-1 rounded-full text-xs font-bold shadow-lg">
-                                    <i class="fas fa-crown mr-1"></i>PREMIUM
+                        <a href="/products/white-tea.html">
+                            <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card relative border-2 border-amber-300 hover:shadow-2xl transition-all duration-300">
+                                <div class="absolute -top-0 -right-0 z-20">
+                                    <div class="bg-amber-400 text-white px-3 py-1 rounded-full text-xs font-bold shadow-lg">
+                                        <i class="fas fa-crown mr-1"></i>PREMIUM
+                                    </div>
+                                </div>
+                                <div class="absolute top-3 right-3 z-20 bg-primary/90 backdrop-blur-sm rounded-full p-2 opacity-0 group-hover:opacity-100 transition-all duration-300 pulse">
+                                    <i class="fas fa-search text-white text-sm"></i>
+                                </div>
+                                <div class="relative">
+                                    <div class="h-40 relative overflow-hidden">
+                                        <img src="/assets/images/specialty-tea-white-tea-thumbnail.jpg" alt="Loose Leaf Tea White - Premium" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
+                                    </div>
+                                    <div class="p-4">
+                                        <h5 class="font-bold text-primary text-lg mb-1">White Tea</h5>
+                                        <p class="text-sm text-amber-600 font-medium mb-1">Health Premium</p>
+                                        <p class="text-sm text-gray-600">Least Processed</p>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="absolute top-3 right-3 z-20 bg-primary/90 backdrop-blur-sm rounded-full p-2 opacity-0 group-hover:opacity-100 transition-all duration-300 pulse">
-                                <i class="fas fa-search text-white text-sm"></i>
-                            </div>
-                            <div class="relative">
-                                <div class="h-40 relative overflow-hidden">
-                                    <img src="/assets/images/specialty-tea-white-tea-thumbnail.jpg" alt="Loose Leaf Tea White - Premium" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
-                                </div>
-                                <div class="p-4">
-                                    <h5 class="font-bold text-primary text-lg mb-1">White Tea</h5>
-                                    <p class="text-sm text-amber-600 font-medium mb-1">Health Premium</p>
-                                    <p class="text-sm text-gray-600">Least Processed</p>
-                                </div>
-                            </div>
-                        </div>
+                        </a>
                     </div>
 
                     <div class="text-center">
