--- a/products/white-tea.html
+++ b/products/white-tea.html
@@ -518,7 +518,7 @@
 
                 <!-- Quality Assurance -->
                 <div>
-                    <h2 class="text-2xl font-bold text-gray-900 mb-6">Quality Assurance</h2>
+                    <h2 class="text-2xl font-bold text-gray-900 mb-6">Certifications</h2>
                     <div class="bg-white rounded-xl p-4 shadow-sm">
                         <div class="grid grid-cols-2 gap-3 mb-4">
                             <div class="text-center">
@@ -526,8 +526,8 @@
                                 <p class="text-xs text-gray-600">Halal Certified</p>
                             </div>
                             <div class="text-center">
-                                <img src="/assets/images/pesticide-free.jpg" alt="Pesticide Free" class="w-12 h-12 mx-auto mb-1 object-contain">
-                                <p class="text-xs text-gray-600">Pesticide Free</p>
+                                <img src="/assets/images/haccp.jpg" alt="HACCP Certified" class="w-12 h-12 mx-auto mb-1 object-contain">
+                                <p class="text-xs text-gray-600">HACCP Certified</p>
                             </div>
                         </div>
                         <div class="space-y-2 text-sm">
