--- a/products/white-tea.html
+++ b/products/white-tea.html
@@ -361,14 +361,14 @@
                     <div class="space-y-4">
                         <!-- Main Image -->
                         <div class="main-image">
-                            <img id="mainImage" src="/assets/images/specialty-tea-white-tea.jpg" alt="Premium White Tea" class="w-full h-96 object-cover rounded-2xl shadow-lg">
+                            <img id="mainImage" src="/assets/images/white-tea-sample.jpeg" alt="Premium White Tea" class="w-full h-96 object-cover rounded-2xl shadow-lg">
                         </div>
                         
                         <!-- Thumbnails -->
                         <div class="thumbnails-container">
-                            <img src="/assets/images/specialty-tea-white-tea.jpg" alt="White Tea Leaves" class="thumbnail active object-cover rounded-lg" onclick="changeMainImage(this.src)">
-                            <img src="/assets/images/specialty-tea-white-tea-thumbnail.jpg" alt="White Tea Close-up" class="thumbnail object-cover rounded-lg" onclick="changeMainImage('/assets/images/specialty-tea-white-tea.jpg')">
-                            <img src="/assets/images/tea-brewed.jpg" alt="Brewed White Tea" class="thumbnail object-cover rounded-lg" onclick="changeMainImage(this.src)">
+                            <img src="/assets/images/white-tea-sample-thumbnail.jpeg" alt="White Tea Close-up" class="thumbnail object-cover rounded-lg" onclick="changeMainImage('/assets/images/white-tea-sample.jpeg')">
+                            <!-- <img src="/assets/images/specialty-tea-white-tea.jpg" alt="White Tea Leaves" class="thumbnail active object-cover rounded-lg" onclick="changeMainImage(this.src)"> -->
+                            <!-- <img src="/assets/images/tea-brewed.jpg" alt="Brewed White Tea" class="thumbnail object-cover rounded-lg" onclick="changeMainImage(this.src)"> -->
                         </div>
                     </div>
                 </div>
@@ -404,7 +404,7 @@
                             </div>
                             <div class="flex items-center space-x-3">
                                 <div class="w-2 h-2 bg-primary rounded-full"></div>
-                                <span class="text-gray-700">Hand-plucked young buds</span>
+                                <span class="text-gray-700">Preserves natural nutrients</span>
                             </div>
                             <div class="flex items-center space-x-3">
                                 <div class="w-2 h-2 bg-primary rounded-full"></div>
@@ -412,7 +412,11 @@
                             </div>
                             <div class="flex items-center space-x-3">
                                 <div class="w-2 h-2 bg-primary rounded-full"></div>
-                                <span class="text-gray-700">Preserves natural nutrients</span>
+                                <span class="text-gray-700">Pristine, silvery-white buds</span>
+                            </div>
+                            <div class="flex items-center space-x-3">
+                                <div class="w-2 h-2 bg-primary rounded-full"></div>
+                                <span class="text-gray-700">Straight, uncurled leaf texture</span>
                             </div>
                         </div>
                     </div>
