--- a/products/white-tea.html
+++ b/products/white-tea.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -412,10 +411,6 @@
                             </div>
                             <div class="flex items-center space-x-3">
                                 <div class="w-2 h-2 bg-primary rounded-full"></div>
-                                <span class="text-gray-700">Pristine, silvery-white buds</span>
-                            </div>
-                            <div class="flex items-center space-x-3">
-                                <div class="w-2 h-2 bg-primary rounded-full"></div>
                                 <span class="text-gray-700">Straight, uncurled leaf texture</span>
                             </div>
                         </div>
@@ -425,13 +420,13 @@
                     <div class="bg-gray-50 rounded-xl p-6 mb-8">
                         <h3 class="text-lg font-semibold text-gray-900 mb-4">Quick Specifications</h3>
                         <div class="grid grid-cols-2 gap-4 text-sm">
-                            <div>
+                            <!-- <div>
                                 <span class="text-gray-600">Origin:</span>
                                 <span class="font-medium text-gray-900 ml-2">West Java, Indonesia</span>
-                            </div>
+                            </div>  -->
                             <div>
-                                <span class="text-gray-600">Grade:</span>
-                                <span class="font-medium text-gray-900 ml-2">Premium</span>
+                                <span class="text-gray-600">Color:</span>
+                                <span class="font-medium text-gray-900 ml-2">Silvery-white</span>
                             </div>
                             <div>
                                 <span class="text-gray-600">Caffeine:</span>
@@ -474,9 +469,9 @@
     <!-- Health Benefits & Quality Assurance -->
     <section class="py-12 bg-gray-50">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
                 <!-- Health Benefits -->
-                <div>
+                <div class="lg:col-span-2">
                     <h2 class="text-2xl font-bold text-gray-900 mb-6">Health Benefits</h2>
                     <div class="bg-green-50 border border-green-200 rounded-lg p-3 mb-2">
                         <p class="text-sm text-green-800">
@@ -520,7 +515,7 @@
                     </div>
                 </div>
 
-                <!-- Quality Assurance -->
+                <!-- Certifications -->
                 <div>
                     <h2 class="text-2xl font-bold text-gray-900 mb-6">Certifications</h2>
                     <div class="bg-white rounded-xl p-4 shadow-sm">
@@ -569,47 +564,63 @@
         </div>
     </section>
 
-    <!-- Supply Terms -->
-    <section class="py-12">
+    <!-- Export Supply Information -->
+    <section class="py-8 bg-gray-50">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="max-w-4xl mx-auto">
-                <h2 class="text-2xl font-bold text-gray-900 mb-6 text-center">Export Supply Information</h2>
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8">
-                    <div class="bg-gray-50 rounded-lg p-4 text-center">
-                        <div class="w-10 h-10 bg-primary/10 rounded-full flex items-center justify-center mx-auto mb-3">
-                            <i class="fas fa-box text-primary"></i>
+            <h2 class="text-xl font-semibold text-gray-800 mb-4">Export Supply Information</h2>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+                <!-- Minimum Order -->
+                <div class="bg-white rounded-lg p-4 border border-gray-100">
+                    <div class="flex items-center">
+                        <div class="w-8 h-8 bg-primary/5 rounded-lg flex items-center justify-center mr-3">
+                            <i class="fas fa-box text-primary text-sm"></i>
                         </div>
-                        <h3 class="font-semibold text-gray-900 text-sm mb-1">Minimum Order</h3>
-                        <p class="text-gray-600 text-sm">Competitive MOQ</p>
-                        <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20what%27s%20the%20minimum%20order%20for%20White%20Tea?" target="_blank" class="text-primary hover:text-accent font-medium text-xs mt-1 block">
-                            <i class="fas fa-info-circle mr-1"></i>Get MOQ Details
-                        </a>
-                    </div>
-                    <div class="bg-gray-50 rounded-lg p-4 text-center">
-                        <div class="w-10 h-10 bg-primary/10 rounded-full flex items-center justify-center mx-auto mb-3">
-                            <i class="fas fa-truck text-primary"></i>
+                        <div class="flex-1">
+                            <h3 class="font-medium text-gray-800 text-sm">Minimum Order</h3>
+                            <p class="text-gray-500 text-xs mb-2">Competitive MOQ</p>
+                            <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20I%27d%20like%20to%20know%20the%20minimum%20order%20for%20White%20Tea" 
+                               target="_blank" 
+                               class="inline-block text-primary hover:text-accent text-xs font-medium">
+                                Get MOQ Details →
+                            </a>
                         </div>
-                        <h3 class="font-semibold text-gray-900 text-sm mb-1">Lead Time</h3>
-                        <p class="text-gray-600 text-sm">30 days for 100kg</p>
-                    </div>
-                    <div class="bg-gray-50 rounded-lg p-4 text-center">
-                        <div class="w-10 h-10 bg-primary/10 rounded-full flex items-center justify-center mx-auto mb-3">
-                            <i class="fas fa-globe text-primary"></i>
-                        </div>
-                        <h3 class="font-semibold text-gray-900 text-sm mb-1">Export Terms</h3>
-                        <p class="text-gray-600 text-sm">Global shipping</p>
-                        <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20I%20need%20export%20terms%20for%20White%20Tea" target="_blank" class="text-primary hover:text-accent font-medium text-xs mt-1 block">
-                            <i class="fas fa-ship mr-1"></i>View Terms
-                        </a>
                     </div>
                 </div>
-                <div class="bg-primary/5 rounded-xl p-6 text-center">
-                    <h3 class="text-lg font-semibold text-gray-900 mb-3">Ready to Partner with Us?</h3>
-                    <p class="text-gray-600 mb-4 text-sm">Get detailed pricing, terms, and customization options for your business needs.</p>
-                    <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20I%20need%20detailed%20export%20terms%20and%20pricing%20for%20White%20Tea" target="_blank" class="bg-primary hover:bg-accent text-white px-6 py-3 rounded-xl font-semibold transition-all inline-flex items-center">
-                        <i class="fab fa-whatsapp mr-2"></i>
-                        Get Detailed Quote
-                    </a>
+
+                <!-- Lead Time -->
+                <div class="bg-white rounded-lg p-4 border border-gray-100">
+                    <div class="flex items-center">
+                        <div class="w-8 h-8 bg-primary/5 rounded-lg flex items-center justify-center mr-3">
+                            <i class="fas fa-clock text-primary text-sm"></i>
+                        </div>
+                        <div>
+                            <h3 class="font-medium text-gray-800 text-sm">Lead Time</h3>
+                            <p class="text-primary font-semibold text-sm">30 Days <span class="text-gray-500 font-normal">(100kg)</span></p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Export Terms -->
+                <div class="bg-white rounded-lg p-4 border border-gray-100">
+                    <div class="flex items-start">
+                        <div class="w-8 h-8 bg-primary/5 rounded-lg flex items-center justify-center mr-3 mt-0.5 flex-shrink-0">
+                            <i class="fas fa-globe-americas text-primary text-sm"></i>
+                        </div>
+                        <div>
+                            <h3 class="font-medium text-gray-800 text-sm mb-2">Global Shipping</h3>
+                            <ul class="space-y-2 text-xs text-gray-600 mb-3">
+                                <li class="flex items-center">
+                                    <i class="fas fa-check text-green-500 mr-1.5 w-3"></i>
+                                    <span>FOB & CIF Available</span>
+                                </li>
+                            </ul>
+                            <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20I%27d%20like%20to%20discuss%20shipping%20options%20for%20White%20Tea" 
+                               target="_blank" 
+                               class="inline-flex items-center text-primary hover:text-accent text-xs font-medium">
+                                <i class="fab fa-whatsapp mr-1"></i> Discuss Shipping
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
