--- a/products/tea.html
+++ b/products/tea.html
@@ -581,8 +581,8 @@
                     </div>
 
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mb-8">
-                        <!-- Ceremonial Grade -->
-                        <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card relative border-2 border-green-400" onclick="openVariantPopup('Ceremonial Grade Matcha', 'The highest quality matcha made from the youngest tea leaves. Perfect for traditional tea ceremony with sweet, smooth taste and vibrant green color.', '/assets/images/green-tea-chun-mee.jpg')">
+                        <!-- Assamica Matcha -->
+                        <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card relative border-2 border-green-400" onclick="openVariantPopup('Assamica Matcha', 'The highest quality matcha made from the youngest tea leaves. Perfect for traditional tea ceremony with sweet, smooth taste and vibrant green color.', '/assets/images/assamica-matcha.jpeg')">
                             <div class="absolute -top-0 -right-0 z-20">
                                 <div class="bg-green-500 text-white px-3 py-1 rounded-full text-xs font-bold shadow-lg">
                                     <i class="fas fa-star mr-1"></i>CEREMONIAL
@@ -593,43 +593,43 @@
                             </div>
                             <div class="relative">
                                 <div class="h-32 relative overflow-hidden">
-                                    <img src="/assets/images/green-tea-chun-mee-thumbnail.jpg" alt="Ceremonial Grade Matcha" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
+                                    <img src="/assets/images/assamica-matcha.jpeg" alt="Ceremonial Grade Matcha" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
                                 </div>
                                 <div class="p-4">
-                                    <h5 class="font-bold text-primary text-lg mb-1">Ceremonial Grade</h5>
-                                    <p class="text-sm text-gray-600">Premium quality for tea ceremony</p>
+                                    <h5 class="font-bold text-primary text-lg mb-1">Assamica Matcha</h5>
+                                    <p class="text-sm text-gray-600">Bold & Earthy</p>
                                 </div>
                             </div>
                         </div>
 
-                        <!-- Premium Grade -->
-                        <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card" onclick="openVariantPopup('Premium Grade Matcha', 'High-quality matcha suitable for drinking and culinary use. Balanced flavor with good color retention for premium food and beverage applications.', '/assets/images/green-tea-fannings.jpg')">
+                        <!-- Sinensis Matcha -->
+                        <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card" onclick="openVariantPopup('Sinensis Matcha', 'High-quality matcha suitable for drinking and culinary use. Balanced flavor with good color retention for premium food and beverage applications.', '/assets/images/sinesis-mactha.jpeg')">
                             <div class="absolute top-3 right-3 z-20 bg-primary/90 backdrop-blur-sm rounded-full p-2 opacity-0 group-hover:opacity-100 transition-all duration-300 pulse">
                                 <i class="fas fa-search text-white text-sm"></i>
                             </div>
                             <div class="relative">
                                 <div class="h-32 relative overflow-hidden">
-                                    <img src="/assets/images/green-tea-fannings-thumbnail.jpg" alt="Premium Grade Matcha" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
+                                    <img src="/assets/images/sinesis-mactha.jpeg" alt="Premium Grade Matcha" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
                                 </div>
                                 <div class="p-4">
-                                    <h5 class="font-bold text-primary text-lg mb-1">Premium Grade</h5>
-                                    <p class="text-sm text-gray-600">Ideal for lattes and smoothies</p>
+                                    <h5 class="font-bold text-primary text-lg mb-1">Sinensis Matcha</h5>
+                                    <p class="text-sm text-gray-600">Classic & Smooth</p>
                                 </div>
                             </div>
                         </div>
 
-                        <!-- Culinary Grade -->
-                        <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card" onclick="openVariantPopup('Culinary Grade Matcha', 'Cost-effective matcha perfect for cooking, baking, and industrial food production. Strong flavor that stands up well in recipes and mass production.', '/assets/images/green-tea-gun-powder.jpg')">
+                        <!-- Finely Ground Black Tea Powder -->
+                        <div class="bg-white rounded-xl shadow-lg overflow-hidden group cursor-pointer variant-card" onclick="openVariantPopup('Black Matcha', 'Cost-effective matcha perfect for cooking, baking, and industrial food production. Strong flavor that stands up well in recipes and mass production.', '/assets/images/black-matcha.jpeg')">
                             <div class="absolute top-3 right-3 z-20 bg-primary/90 backdrop-blur-sm rounded-full p-2 opacity-0 group-hover:opacity-100 transition-all duration-300 pulse">
                                 <i class="fas fa-search text-white text-sm"></i>
                             </div>
                             <div class="relative">
                                 <div class="h-32 relative overflow-hidden">
-                                    <img src="/assets/images/green-tea-gun-powder-thumbnail.jpg" alt="Culinary Grade Matcha" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
+                                    <img src="/assets/images/black-matcha.jpeg" alt="Culinary Grade Matcha" class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105">
                                 </div>
                                 <div class="p-4">
-                                    <h5 class="font-bold text-primary text-lg mb-1">Culinary Grade</h5>
-                                    <p class="text-sm text-gray-600">Perfect for baking and bulk production</p>
+                                    <h5 class="font-bold text-primary text-lg mb-1">Black Matcha</h5>
+                                    <p class="text-sm text-gray-600">Robust & Aromatic</p>
                                 </div>
                             </div>
                         </div>
