adjust title white tea

--- a/products/white-tea.html
+++ b/products/white-tea.html
@@ -376,10 +376,10 @@
                 <div class="fade-in">
                     <div class="mb-6">
                         <div class="flex items-center gap-3 mb-4">
-                            <span class="bg-amber-100 text-amber-800 px-3 py-1 rounded-full text-sm font-medium">Premium Grade</span>
+                            <span class="bg-amber-100 text-amber-800 px-3 py-1 rounded-full text-sm font-medium">Premium</span>
                             <span class="bg-green-100 text-green-800 px-3 py-1 rounded-full text-sm font-medium">High Antioxidants</span>
                         </div>
-                        <h1 class="text-4xl font-bold text-gray-900 mb-4">Premium White Tea</h1>
+                        <h1 class="text-4xl font-bold text-gray-900 mb-4">White Tea</h1>
                         <p class="text-lg text-gray-600 leading-relaxed mb-6">
                             Delicately hand-picked young tea buds from the highlands of West Java. Our White Tea offers a smooth, floral profile with natural sweetness, high in antioxidants and processed with oven-dehydrator to preserve maximum nutrition.
                         </p>
@@ -543,7 +543,7 @@
                                 <i class="fas fa-lock text-amber-600"></i>
                             </div>
                             <div class="flex justify-between items-center">
-                                <span class="text-gray-700">Additional Safety Certificates</span>
+                                <span class="text-gray-700">••••••• Safety Certificates</span>
                                 <i class="fas fa-lock text-amber-600"></i>
                             </div>
                         </div>
