swap CTA position

--- a/products/white-tea.html
+++ b/products/white-tea.html
@@ -416,8 +416,20 @@
                         </div>
                     </div>
 
+                    <!-- Main CTAs -->
+                    <div class="flex flex-col sm:flex-row gap-4 mb-8">
+                        <button onclick="addToSampleCart()" class="flex-1 bg-secondary hover:bg-secondary/90 text-white px-8 py-4 rounded-xl font-semibold transition-all flex items-center justify-center">
+                            <i class="fas fa-shopping-cart mr-2"></i>
+                            Buy Sample (100g)
+                        </button>
+                        <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20I%20would%20like%20to%20inquire%20about%20Premium%20White%20Tea%20for%20wholesale%20export" target="_blank" class="flex-1 bg-primary hover:bg-accent text-white px-8 py-4 rounded-xl font-semibold transition-all flex items-center justify-center">
+                            <i class="fab fa-whatsapp mr-2"></i>
+                            Make an Inquiry
+                        </a>
+                    </div>
+
                     <!-- Quick Specs -->
-                    <div class="bg-gray-50 rounded-xl p-6 mb-8">
+                    <div class="bg-gray-50 rounded-xl p-6">
                         <h3 class="text-lg font-semibold text-gray-900 mb-4">Quick Specifications</h3>
                         <div class="grid grid-cols-2 gap-4 text-sm">
                             <!-- <div>
@@ -450,17 +462,6 @@
                         </div>
                     </div>
 
-                    <!-- Main CTAs -->
-                    <div class="flex flex-col sm:flex-row gap-4">
-                        <button onclick="addToSampleCart()" class="flex-1 bg-secondary hover:bg-secondary/90 text-white px-8 py-4 rounded-xl font-semibold transition-all flex items-center justify-center">
-                            <i class="fas fa-shopping-cart mr-2"></i>
-                            Buy Sample (100g)
-                        </button>
-                        <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20I%20would%20like%20to%20inquire%20about%20Premium%20White%20Tea%20for%20wholesale%20export" target="_blank" class="flex-1 bg-primary hover:bg-accent text-white px-8 py-4 rounded-xl font-semibold transition-all flex items-center justify-center">
-                            <i class="fab fa-whatsapp mr-2"></i>
-                            Make an Inquiry
-                        </a>
-                    </div>
                 </div>
             </div>
         </div>
