--- a/products/tea.html
+++ b/products/tea.html
@@ -235,7 +235,7 @@
                                 <!-- Free Samples CTA -->
                                 <div class="flex flex-col sm:flex-row justify-between sm:items-center gap-4">
                                   <p class="hidden sm:block text-white w-full sm:w-1/2">
-                                    Discover our hand-picked selection. It has passed our stringent quality qualifications, earning our personal recommendation and is designed for global market demands
+                                    Discover our hand-picked selection. It has passed our qualifications, earning our personal recommendation and is designed for global market demands
                                   </p>
                                   <div class="w-full sm:w-1/2 flex sm:justify-end">
                                     <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20I%20would%20like%20to%20request%20tea%20samples" 
