adjust hero in plp

--- a/products/tea.html
+++ b/products/tea.html
@@ -213,16 +213,29 @@
         </div>
     </nav>
 
+    <!-- Breadcrumb -->
+    <div class="bg-gray-50 py-4">
+        <div class="container mx-auto px-4 sm:px-6 lg:px-8">
+            <nav class="text-sm">
+                <ol class="flex items-center space-x-2">
+                    <li><a href="../index.html" class="text-gray-500 hover:text-primary">Home</a></li>
+                    <li><span class="text-gray-400">/</span></li>
+                    <li class="text-primary font-medium">Tea Products</li>
+                </ol>
+            </nav>
+        </div>
+    </div>
+
     <!-- Main Content -->
     <section class="py-16 bg-white">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <!-- Page Header with Hero Image -->
             <div class="mb-16">
                 <!-- Hero Section -->
-                <div class="relative h-80 rounded-2xl overflow-hidden mb-8">
+                <div class="relative h-80 md:h-96 rounded-2xl overflow-hidden mb-8">
                     <!-- Background Image -->
                     <div class="absolute inset-0 bg-gradient-to-r from-black/60 to-black/30">
-                        <img src="/assets/images/hero-product-list.jpg" alt="Premium Tea Collection" class="w-full h-full object-cover">
+                        <img src="/assets/images/hero-product-list.jpg" alt="Premium Tea Collection" class="w-full h-full object-cover object-right lg:object-center">
                     </div>
 
                     <!-- Content Overlay -->
@@ -234,10 +247,10 @@
 
                                 <!-- Free Samples CTA -->
                                 <div class="flex flex-col sm:flex-row justify-between sm:items-center gap-4">
-                                  <p class="hidden sm:block text-white w-full sm:w-1/2">
+                                  <p class="hidden lg:block text-white w-full lg:w-1/2">
                                     Discover our hand-picked selection. It has passed our qualifications, earning our personal recommendation and is designed for global market demands
                                   </p>
-                                  <div class="w-full sm:w-1/2 flex sm:justify-end">
+                                  <div class="w-full lg:w-1/2 flex lg:justify-end">
                                     <a href="https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20I%20would%20like%20to%20request%20tea%20samples" 
                                        target="_blank" 
                                        class="bg-primary hover:bg-emerald-700 text-white px-6 py-3 rounded-lg font-medium transition duration-300 inline-flex items-center whitespace-nowrap">
